objects/MFG_Discrete_Partners_Internal_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>Observation__c</fullName>
        <label>Observation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Rating__c</fullName>
        <label>Performance Rating</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Internal Feedback</relationshipLabel>
        <relationshipName>Internal_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Internal Feedback</label>
    <nameField>
        <displayFormat>FB-{0000000}</displayFormat>
        <label>Internal Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Feedback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>